force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Anchor_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Product_Codes__c</fullName>
    <description>REV-71 spec §3: semicolon-separated anchor ProductCodes whose presence (as a standalone line or bundle parent) maps the deal to this family. Bundle Family records only.</description>
    <label>Anchor Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>