force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Layer_1_Active__c.field-meta.xml
<CustomField>
    <fullName>Layer_1_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>REV-71 spec §5 kill switch: when unchecked, QL_ALM_Code_AfterSave (Layer 1, quote line engine) exits without acting. Control record only.</description>
    <label>Layer 1 Active (Quote Line)</label>
    <type>Checkbox</type>
</CustomField>