force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Layer_2_Active__c.field-meta.xml
<CustomField>
    <fullName>Layer_2_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>REV-71 spec §5 kill switch: when unchecked, OLI_ALM_Code_AfterSave (Layer 2, opportunity product safety net) exits without acting. Control record only.</description>
    <label>Layer 2 Active (Opp Product)</label>
    <type>Checkbox</type>
</CustomField>