force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>REV-71 spec §3: exact ProductCode of a CPQ bundle parent that consolidates natively in Integra. Bundle Parent records only; used as the child-exclusion fallback for non-CPQ/legacy lines. Inactive bundles stay listed — historical OLIs still reference them.</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>