force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <description>REV-71: discriminator for the three record kinds — Bundle Family (code + anchors), Bundle Parent (exclusion list), Control (switches).</description>
    <label>Setting Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle Family</fullName>
            </value>
            <value>
                <fullName>Bundle Parent</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>