force-app/main/default/objects/ALM_Code_Setting__mdt/fields/TCV_Code__c.field-meta.xml
<CustomField>
    <fullName>TCV_Code__c</fullName>
    <description>REV-71 spec §3: the TCV consolidation code (1/2/3) Integra uses to consolidate this bundle family to one invoice line. Bundle Family records only.</description>
    <label>TCV Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>