force-app/main/default/objects/ALM_Code_Setting__mdt/fields/Use_Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Use_Net_Total_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>REV-71 spec §4 / §8-Q3 price-basis toggle for the LAWM-vs-LWKM highest-priced comparison: checked = net TotalPrice summed per product across years (resolved basis — List Price is 0.00 on live records and unusable); unchecked = list price basis (not recommended). Control record only.</description>
    <label>Use Net Total Price</label>
    <type>Checkbox</type>
</CustomField>